--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.11",
+    "@iconify-json/twemoji": "^1.1.6",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0",
     "@types/jwt-decode": "^3.1.0",
@@ -33,7 +35,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "unocss": "^0.46.5"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
