--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@unocss/vite": "^0.48.4",
     "autoprefixer": "^10.4.2",
+    "dotenv": "^16.0.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
