--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
-    "unocss": "^0.46.5"
+    "unocss": "^0.46.5",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
